# agent-terminal

./: README.md  ai.py  interactive_mode.py  main.py  pyproject.toml  requirements.txt  test_input.txt  test_prompt.txt
lib/: agent.py  ai.py
lib/llm/: basellm.py  ollama.py  openai.py  prompts.py  test.py
lib/utils/: text.py
pymath/lib/: math.py
tests/: test_ai.py  test_interactive_mode.py
