[project]
name = "agent-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.86.0",
    "requests>=2.32.4",
    "prompt_toolkit",
    "rich",
]



[tool.uv]
package = true


[tool.uv.sources]
lib = { path = "./lib", editable = true}

[project.scripts]
ai = "lib.ai:main"

