[project]
name = "agent-terminal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt_toolkit",
    "rich",
    "wcwidth",
    # openai, requests, pydantic and their ecosystem are now in requirements.txt
]



[tool.uv]
package = true


[tool.uv.sources]
lib = { path = "./lib", editable = true}

[project.scripts]
ai = "lib.ai:main"

